# MLOps

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: api_deploy.yaml
app/: model.py  mon_api.py
